# minix

./: .gitignore  .pr_description.md  .soc-robustness.patch  AGENTS.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  SOCP_INVESTIGATION.md  analysis.md  analysis2.md  boyd1_iters.md  boyd_debug.md  clarabel_learnings.md  codeindex.py  convex_mip_solver_design_final_final.md  gitdiff  improvements.md  improvements_v2.md  improvements_v3.md  improvements_v4.md  improvements_v5.md  maros_cached_run.txt  merge_qa_analysis.md  minix_boyd_fixes.patch  minix_p0_fixes_v4.patch  minix_wallclock_killers.patch  mip_solver_on_solver_core_design_research.md  perf_baseline.json  rustfiles  rustfiles-solver-bench  rustfiles-solver-core
.claude/logs/: ipm_debugging_log.md
.github/workflows/: ci.yml
_planning/: LOG.md  ablation_results.md  exp_cone_benchmark_results.md  exp_cone_bug_investigation.md  exp_cone_dual_barrier_analysis.md  exp_cone_solver_comparison.md  exp_cone_third_order_implementation.md  exp_sdp_cone_investigation.md  minix_mosek_clarabel_master_design_final.md  minix_mosek_clarabel_tasks_final.md  minix_mosek_code_bundle.txt  minix_mosek_level_design.md  minix_mosek_level_design_v2.md  minix_mosek_task_table.md  path_to_best_exp_cone_solver.md  split_minix_mosek_bundle.py
_planning/v10/: direct_solve_plan.md  next_steps.md
_planning/v11/: minix_non_hsde_direct_solve_design.md
_planning/v12/: minix_feasibility_floor_improvements.md  minix_feasibility_floor_improvements.patch  summary.md
_planning/v13/: remaining_failures_plan.md
_planning/v14/: minix_numerical_recovery.patch  minix_numerical_recovery_summary.md
_planning/v15/: clarabel_mosek_research.md  conditioning_results.md  detailed_failures.md  diagnostic_findings.md  exploratory_fixes.md  next_steps.md  non_converging_analysis.md  presolve_implementation.md  running_log.md  session2_summary.md  session3_summary.md  session_summary.md  summary.md  test_clarabel.py
_planning/v16/: ALL_31_FAILURES_ITERATIONS_25-30.txt  README.md  V16_COMPREHENSIVE.md
_planning/v17/: ALL_31_FAILURES_ITERATIONS_25-30.txt  CURRENT_STATE.md  log.md  minix_next_steps_worth_trying_v16_plus.md
_planning/v18/: FULL_DIAGNOSTICS.md  RESULTS.md  RUNNING_LOG.md  improvement_plan.md
_planning/v19/: PLAN.md  RUNNING_LOG.md  SUMMARY.md  sdp_summary.md
_planning/v2/: mosek_additional_methods.md  mosek_standalone_linalg_bundle.txt  split_mosek_standalone_linalg_bundle.py
_planning/v20/: AVOIDING_NUMERICAL_LIMITS.md  CONDITION_AWARE_ACCEPTANCE.md  FINAL_SUMMARY.md  PASS_RATE_IMPROVEMENTS.md  PLAN.md  PROBLEM_BREAKDOWN.md  SUMMARY.md
_planning/v21/: currentstate.md  improvements
_planning/v22/: LOG.md  improvements
_planning/v23/: improvements
_planning/v24/: feedback
_planning/v25/: chordal_decomposition_plan.md  clarabel_comparison.md
_planning/v26/: 0001_ipm2_stable_lambda2_inplace.patch  LOG.md  minix_psd_reg_floor.patch  minix_soc_scaled_neighborhood.patch  (+4 more)
docs/: PR_DESCRIPTION.md
solver-bench/: Cargo.toml  README.md  benchmark_clarabel_correct.py  benchmark_clarabel_only.py  benchmark_socp_timing.py  compare_clarabel.py  run_external_solvers.py
solver-bench/examples/: boyd_diagnostic.rs  comprehensive_cone_diagnostics.rs  exp_cone_baseline.rs  exp_cone_debug.rs  exp_cone_interior_check.rs  exp_cone_no_presolve.rs  exp_cone_suite.rs  exp_cone_timing.rs  exp_cone_timing_proximity.rs  exp_cone_trace.rs  measure_cone_iterations.rs
solver-bench/scripts/: benchmark_clarabel.py  compare_clarabel.py  compare_timing.py  compare_yao_correct.py  full_comparison.py  parse_minix_output.py  run_minix_export.py
solver-bench/src/: cbf.rs  cblib.rs  comparison.rs  conic_benchmarks.rs  exp_cone_bench.rs  main.rs  maros_meszaros.rs  matparser.rs  meszaros.rs  netlib.rs  pglib.rs  qplib.rs  qps.rs  regression.rs  sdplib.rs  solver_choice.rs  test_problems.rs
solver-core/: Cargo.toml  README.md
solver-core/examples/: simple_lp.rs  test_bounds.rs  test_simple_lp.rs
solver-core/src/: lib.rs  problem.rs
solver-core/src/chordal/: cliques.rs  completion.rs  decompose.rs  graph.rs  merge.rs  mod.rs
solver-core/src/cones/: exp.rs  mod.rs  nonneg.rs  pow.rs  psd.rs  soc.rs  traits.rs  zero.rs
solver-core/src/ipm/: hsde.rs  mod.rs  predcorr.rs  termination.rs  workspace.rs
solver-core/src/ipm2/: diagnostics.rs  metrics.rs  mod.rs  modes.rs  perf.rs  polish.rs  predcorr.rs  regularization.rs  solve.rs  solve_normal.rs  workspace.rs
solver-core/src/linalg/: backend.rs  kkt.rs  kkt_trait.rs  mod.rs  normal_eqns.rs  qdldl.rs  sparse.rs  unified_kkt.rs
solver-core/src/linalg/backends/: faer_ldl.rs  mod.rs  suitesparse_ldl.rs
solver-core/src/linalg/backends/cuda/: backend.rs  error.rs  ffi.rs  handle.rs  mod.rs
solver-core/src/linalg/metal/: backend.rs  error.rs  handle.rs  kkt_all_kernels.metal  mod.rs  symbolic.rs
solver-core/src/postsolve/: mod.rs
solver-core/src/presolve/: bounds.rs  condition.rs  eliminate.rs  mod.rs  proximal.rs  ruiz.rs  singleton.rs
solver-core/src/scaling/: bfgs.rs  mod.rs  nt.rs
solver-core/src/util/: logging.rs  mod.rs  numerics.rs  timer.rs
solver-core/tests/: cone_tests.rs  integration_tests.rs
solver-ffi/: Cargo.toml
solver-ffi/src/: lib.rs
solver-mip/: Cargo.toml
solver-mip/examples/: benchmark.rs  simple_bench.rs
solver-mip/src/: error.rs  lib.rs  settings.rs
solver-mip/src/cuts/: disaggregation.rs  kstar.rs  mod.rs  pool.rs  soc.rs
solver-mip/src/master/: backend.rs  ipm_backend.rs  mod.rs
solver-mip/src/model/: mod.rs  problem.rs  solution.rs
solver-mip/src/oracle/: certificate.rs  conic.rs  mod.rs
solver-mip/src/search/: branching.rs  mod.rs  node.rs  queue.rs  tree.rs
solver-mip/tests/: misocp.rs
solver-py/: Cargo.toml  benchmark_cvxpy.py  benchmark_mm_cvxpy.py  exp_cone_comparison.py  exp_cone_direct_comparison.py  minix_cvxpy.py  mm_broad.py  mm_cvxpy.py  mm_quick.py  mm_test_few.py  mm_timeout.py  pyproject.toml  test_clarabel_verbose.py  verify_piqp.py
solver-py/python/minix/: __init__.py  cvxpy_backend.py
solver-py/src/: lib.rs
(+42 files in other folders)
