[workspace]
members = [
    "solver-core",
    "solver-mip",
    "solver-ffi",
    "solver-py",
    "solver-bench",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Minix Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/minix-solver/minix"
rust-version = "1.75"

[workspace.dependencies]
# Dense linear algebra
nalgebra = { version = "0.33", default-features = false, features = ["std"] }

# Sparse matrices and linear algebra
sprs = "0.11"
ldl = "0.1"  # LDL factorization for quasi-definite systems

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Parallelism (optional, feature-gated in individual crates)
rayon = "1.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI tools
clap = { version = "4.5", features = ["derive"] }

# Benchmarking and testing
criterion = "0.5"
approx = "0.5"
proptest = "1.5"

# Random number generation (for testing and heuristics)
rand = "0.8"
rand_chacha = "0.3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = false
debug = false

[profile.bench]
inherits = "release"
