[package]
name = "solver-bench"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Benchmarking CLI for minix solver"

[[bin]]
name = "solver-bench"
path = "src/main.rs"

[dependencies]
solver-core = { path = "../solver-core" }
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true
